compiler/test/fail_compilation/failescape.d
/*
TEST_OUTPUT:
---
fail_compilation/failescape.d(10): Error: character '\' is not a valid token
string x = \n;
           ^
---
*/

string x = \n;
